Fix Background color on Mobile

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,11 +16,17 @@
 
  @import "css/**/*";
 
+  html {
+    height: 100vh !important;
+  }
 
  body {
+   min-height: 100vh !important;
    margin: 0px;
    padding: 0px;
-   font-family: century gothic, normal;
+   font-family: century gothic, normal !important;
+   height: 100vh !important;
+   overflow: auto;
  }
 
  #background {
@@ -227,8 +233,9 @@
  }
 
 
-
   @media screen and (max-width: 480px){
+
+
     #background {
       display: none;
     }
@@ -273,63 +280,75 @@
     }
 
     #background_cakes {
-      height: 100%;
       width: 100%;
+      height: 100%;
+      position: fixed;
     }
 
     #background_coffee {
       height: 100%;
       width: 100%;
+      position: fixed;
     }
 
     #background_cookies {
       height: 100%;
       width: 100%;
+      position: fixed;
     }
 
     #background_honey {
       height: 100%;
       width: 100%;
+      position: fixed;
     }
 
     #background_jam {
       height: 100%;
       width: 100%;
+      position: fixed;
     }
 
     #background_macarons {
       height: 100%;
       width: 100%;
+      position: fixed;
     }
 
     #background_tea {
       height: 100%;
       width: 100%;
+      position: fixed;
     }
 
     #background_cards {
       height: 100%;
       width: 100%;
+      position: fixed;
     }
 
     #background_envelopes {
       height: 100%;
       width: 100%;
+      position: fixed;
     }
 
     #background_candle {
       height: 100%;
       width: 100%;
+      position: fixed;
     }
 
     #background_fans {
       height: 100%;
       width: 100%;
+      position: fixed;
     }
 
     #background_shades {
       height: 100%;
       width: 100%;
+      position: fixed;
     }
 
     .product_description {
